Decouple validation from markdig extensions (#5360)

--- a/src/Microsoft.DocAsCode.MarkdigEngine.Extensions/Microsoft.DocAsCode.MarkdigEngine.Extensions.csproj
+++ b/src/Microsoft.DocAsCode.MarkdigEngine.Extensions/Microsoft.DocAsCode.MarkdigEngine.Extensions.csproj
@@ -4,10 +4,7 @@
   <ItemGroup>
     <PackageReference Include="Markdig" Version="0.16.0" />
     <PackageReference Include="Newtonsoft.Json" Version="9.0.1" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\Microsoft.DocAsCode.MarkdigEngine.Validators\Microsoft.DocAsCode.MarkdigEngine.Validators.csproj" />
+    <PackageReference Include="System.Collections.Immutable" Version="1.5.0" />
   </ItemGroup>
 
 </Project>
